Hack around top alignment issue

--- a/src/components/List/List.less
+++ b/src/components/List/List.less
@@ -10,10 +10,10 @@
 
   .header{
     margin: 0;
-    padding: 10px 10px 4px 8px;
-    min-height: 18px;
+    padding: 6px 10px 6px 8px;
+    min-height: 16px;
     font-size: 14px;
-    font-weight: 700;
+    font-weight: 600;
     color: #4d4d4d;
 
     .title{
@@ -46,11 +46,11 @@
 
 .list-title{
   margin: 0;
-  padding: 6px 10px 4px 8px;
+  padding: 10px 10px 7px 8px;
   min-height: 18px;
   font-size: 14px;
   font-weight: 700;
   color: #4d4d4d;
-  border-radius: 4px 0 4px 0;
+  border-radius: 4px 4px 0 0;
   border: 0;
 }
